--- a/client/lib/components/users/bio/bio.html
+++ b/client/lib/components/users/bio/bio.html
@@ -1,6 +1,8 @@
 <template name="userBio">
-  <div class="m-b-md">
-    <img alt="image" class="img-circle circle-border" src="{{state$image}}">
+  <div class="user-bio">
+    <div class="m-b-md">
+      <img alt="image" class="img-circle circle-border" src="{{state$image}}">
+    </div>
+    <h3>{{state$username}}</h3>
   </div>
-  <h3>{{state$username}}</h3>
 </template>
