--- a/client/lib/components/users/bio/bio.html
+++ b/client/lib/components/users/bio/bio.html
@@ -3,6 +3,6 @@
     <div class="m-b-md">
       <img alt="image" class="img-circle circle-border" src="{{state$image}}">
     </div>
-    <h3 class="username">{{state$username}}</h3>
+    <h3 class="username">{{username state$userId}}</h3>
   </div>
 </template>
