--- a/client/lib/components/users/bio/bio.html
+++ b/client/lib/components/users/bio/bio.html
@@ -1,7 +1,7 @@
 <template name="userBio">
   <div class="user-bio">
     <div class="m-b-md">
-      <img alt="image" class="img-circle circle-border" src="{{state$image}}">
+      <img alt="image" class="img-circle circle-border" src="{{profilePicture state$userId}}">
     </div>
     <h3 class="username">{{username state$userId}}</h3>
   </div>
